--- a/TemperatureEE/TemperatureEE-web/pom.xml
+++ b/TemperatureEE/TemperatureEE-web/pom.xml
@@ -21,6 +21,13 @@
     
     <dependencies>
         <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>TemperatureEE-ejb</artifactId>
+            <version>${project.version}</version>
+            <type>ejb</type>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-web-api</artifactId>
             <version>7.0</version>
