broke up logic into temperature, humidity, and HVAC. 3 separate listeners, 3 separate queues, 3 separate tables in DB, etc etc

--- a/Mitochondria/pom.xml
+++ b/Mitochondria/pom.xml
@@ -44,7 +44,7 @@
                         <manifest>
                             <!--addClasspath>true</-addClasspath>
                             <classpathPrefix>lib/</classpathPrefix-->
-                            <mainClass>com.temp.mitochondria.TemperatureInterval</mainClass>
+                            <mainClass>com.temp.mitochondria.DataInterval</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
